add watch run handler
